Fix: 모바일 하단 날짜선택하기 z-index 수정

--- a/src/components/Activity/Schedules/Schedules.module.scss
+++ b/src/components/Activity/Schedules/Schedules.module.scss
@@ -17,7 +17,7 @@
     padding: 16px;
     background: #fff;
     border-radius: 0;
-    z-index: 30;
+    z-index: 50;
   }
 
   .price {
